--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }] }
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/app.js" }
+    ]
+  }
