--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
-{
-  "dependencies": {
+{  
+    "name": "server",
+    "version": "1.0.0",
+    "main": "app.js",
+    "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+    },
+    "license": "ISC",
+    "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
