updated environment variables

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-
-MONGODB_URI = mongodb+srv://yingcui02:cuiying@cluster0.toa8pga.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+username=yingcui02
+password=cuiying
 FIREBASE_API_KEY=AIzaSyBYZIAq8ogdrMc5rHP9DjHM5tW4n4PyQj0
 FIREBASE_AUTH_DOMAIN=node-travel-blog.firebaseapp.com
 FIREBASE_PROJECT_ID=node-travel-blog
